--- a/views/payees-show.hbs
+++ b/views/payees-show.hbs
@@ -1,12 +1,46 @@
-<!-- {{#unless payee}} -->
-<h2>That payee couldn't be found!</h2>
-<!-- {{/if}}
+<!-- {{#unless payee}}
+<h2>That bill couldn't be found!</h2>
 {{else}}
-<h2>{{payee.name}} Bill</h2>
-<form action="/payees/{{payee.name}}" method="post">
-  <input type="text" name="payee[name]" placeholder="Name" value="{{payee.name}}">
-  <input type="text" name="payee[address]" placeholder="Address" value="{{payee.address}}">
-  <input type="number" name="payee[account_no]" placeholder="Account Number" value="{{payee.account_no}}">
-  <button type="submit">Edit Platform</button>
-</form> -->
-<!-- {{/unless}} -->
+<h2>{{payee.name}}</h2>
+<p>{{payee.address}}</p>
+
+{{/unless}}
+ -->
+<form method="post" action="/payees/{{payee.name}}/delete">
+  <button type="submit">Delete Bill</button>
+</form>
+
+
+  {{#if payee}}
+    <p>{{payee.name}}</p>
+    <p>{{payee.address}}</p>
+    <p>Account #: {{payee.account_no}}</p>
+    <p>{{payee.due_date}}</p>
+    <p>{{payee.amount_due}}</p>
+    <p>{{payee.paid}}</p>
+    <p>{{payee.last_payment_date}}</p>
+    <p>{{payee.notes}}</p>
+  {{else}}
+    <h1>Unknown Author</h1>
+  {{/if}}
+
+  <form action="/payees" method="post">
+    <input type="text" name="payee[name]" placeholder="Name" />
+    <input type="text" name="payee[address]" placeholder="Address" />
+    <input type="number" name="payee[account_no]" placeholder="Account #" />
+    <input type="date" name="payee[due_date]" placeholder="Due Date" />
+    <input type="number" name="payee[amount_due]" placeholder="Amount Due" />
+    <input type="checkbox" name="payee[paid]" placeholder="Paid" />
+    <input type="date" name="payee[last_payment_date]" placeholder="Last Payment Date" />
+    <input type="text" name="payee[notes]" placeholder="Notes" />
+    <button type="submit">Edit Bill</button>
+  </form>
+
+  <!-- name: String,
+  address: String,
+  account_no: Number,
+  due_date: { type: Date, default: Date.now },
+  amount_due: Number,
+  paid: { type: Boolean, default: false },
+  last_payment_date: { type: Date, default: Date.now },
+  notes: String -->
