--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Meanpay</title>
-    <!-- <link rel="stylesheet" href="/assets/css/styles.css" />
-    <script src="/assets/js/app.js"></script> -->
+    <!-- <link rel="stylesheet" href="/assets/css/styles.css" /> -->
+    <script src="../assets/js/app.js"></script>
   </head>
   <body>
     <h1><a href="/">Meanpay...</a></h1>
